BUG - phone number styling on iOS

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -13,6 +13,11 @@ html {
   font-family: 'Roboto', sans-serif;
 }
 
+a[href^="tel"] {
+  color: inherit;
+  text-decoration: none;
+}
+
 * {
   margin: 0;
   padding: 0;
