--- a/style/utils/_base.scss
+++ b/style/utils/_base.scss
@@ -1,3 +1,10 @@
 html {
     font-family: 'Roboto', sans-serif;
 }
+
+// for removing phone number styling on iOS Safari
+a[href^="tel"] {
+    color: inherit;
+    text-decoration: none;
+  }
+  
